* 2016.04.15 - moved platform.init entries from ck-autotuning here
             - added windows tools to windows-32 OS entry
             - added DragonBoard platform.init  
             - improving software/package installation; showing wiki page when problem

* 2016.04.14 - added lib.toon for PAMELA project
               improving customize.py format to setup up software

* 2016.04.12 - added software descriptions for TETRACOM project:
               freeglut, glew, antlr, glslangvalidator, ogl.get-image, ogl.parser

* 2016.04.08 - started improving automatic detection of software and registration in CK

* 2016.03.25 - improving NN visualization

* 2016.03.24 - adding legacy support and demo for MILEPOST GCC, cTuning plugins, ctuning-cc

* 2016.03.21 - adding universal OpenCL lib soft description for Android devices

* 2016.03.09 - adding soft description for compiler.llvm.android (arm,x86,x86_64)
               adding soft description for texinfo to reproduce MILEPOST GCC 
               (for semantic features extraction)

* 2016.03.01 - adding soft description for CLBLAS, CLBLAST, CLTUNE

* 2016.02.18 - changing platform.accelerator -> platform.gpu

* 2016.02.13 - * adding support to automatically resolve, search and install dependencies 
                 (flag - quiet - useful when crowdsourcing optimization and machine learning)

* 2016.02.10 - * improving CLANG description for Android/ARM via Android NDK
               * improving CLANG version detection
               * fixing detection of platform features (correct reloading of existing features 
                 - useful for arch specific compiler flag crowdtuning)

* 2016.02.09 - * adding postfix for GCC env registration (such as -4.6)

* 2016.02.05 - * record all info during platform detection only 
                 when ck.cfg['record_all_platform_info']=='yes'.
                 Needed to avoid mess when recording local or global info
                 during experiment crowdsourcing.
